Changes as per review