@@ -19,8 +19,7 @@
         <javafx.version>16</javafx.version>
         <aether.version>1.1.0</aether.version>
         <charm.glisten.version>5.0.0-jdk9</charm.glisten.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
@@ -44,6 +43,9 @@
                     <version>0.0.5</version>
                     <configuration>
                         <mainClass>${main.class.name}</mainClass>
+                        <options>
+                            <option>--add-opens=javafx.fxml/javafx.fxml=ALL-UNNAMED</option>
+                        </options>
                     </configuration>
                 </plugin>
 
@@ -51,7 +53,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
+                    <version>3.8.1</version>
                     <configuration>
                         <useIncrementalCompilation>false</useIncrementalCompilation>
                     </configuration>
